--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-
   <h1 class="text-center py-3">Black box</h1>
-  <app-mapbox></app-mapbox>
+  <router-outlet></router-outlet>
 </div>
