--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-  <h1 class="text-center py-3">Black box</h1>
+  <h1 class="text-center py-1"><img [src]="logoUrl" class="img-fluid rotateIn animated" style="max-width: 150px"/>Black box</h1>
   <router-outlet></router-outlet>
 </div>
