--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -38,3 +38,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     text-decoration: initial;
   }
 }
+
+.badge {
+  font-size: initial;
+  font-weight: normal;
+}
