update angular interface for the video

--- a/front-end/src/app/captors/captors.component.html
+++ b/front-end/src/app/captors/captors.component.html
@@ -104,9 +104,9 @@
             <span class="badge badge-primary" *ngIf="device?.led == 'blue'">Blue</span>
             <span class="badge badge-danger" *ngIf="device?.led == 'red'">Red</span>
             <span class="badge badge-secondary" *ngIf="device?.led == 'off'">Off</span>
-            <span class="badge badge-green" *ngIf="device?.led == 'green'">Green</span>
+            <span class="badge badge-success" *ngIf="device?.led == 'green'">Green</span>
             <span class="badge badge-secondary" *ngIf="device?.led == 'purple'">Off</span>
-            <span class="badge badge-yellow" *ngIf="device?.led == 'yellow'">Green</span>
+            <span class="badge badge-warning" *ngIf="device?.led == 'yellow'">Green</span>
           </li>
         </ul>
 
